--- a/style.css
+++ b/style.css
@@ -12,3 +12,39 @@ body{
     min-height: 100vh;
     background-color: #5dd1d1;
 }
+
+.main-sec{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #5dd1d1;
+}
+
+input{
+    width: 100%;
+    height: 40px;
+    font-size: 1rem;
+    color: #000;
+    padding: 0 10px;
+}
+
+a{
+    text-decoration: none;
+}
+
+a,button{
+    padding: 10px 40px;
+    border: none;
+    background-color: #fff;
+    color: #000;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease-in;
+}
+
+a:hover, button:hover{
+    background-color: #000;
+    color: #fff;
+}
+
+/* -----Login Page----- */
