--- a/style.css
+++ b/style.css
@@ -7,44 +7,73 @@
 }
 
 /* -----Common----- */
+/* Body */
 body{
     width: 100%;
     min-height: 100vh;
     background-color: #5dd1d1;
 }
 
+/* Main section */
 .main-sec{
     position: absolute;
     width: 100%;
     height: 100%;
     background-color: #5dd1d1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-input{
+/* Comon forms */
+.common-frm{
+    max-width: 400px;
     width: 100%;
-    height: 40px;
+    padding: 25px;
+    background-color: #fff;
+}
+
+.common-frm form{
+    padding: 15px;
+    background-color: #5dd1d1;
+}
+
+/* Headings */
+h2{
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    color: #000;
+}
+
+/* Input elements */
+input{
+    margin: 5px 0;
+    width: 100%;
+    height: 50px;
     font-size: 1rem;
     color: #000;
     padding: 0 10px;
 }
 
+/* Links & buttons */
 a{
     text-decoration: none;
 }
 
 a,button{
+    width: 100%;
     padding: 10px 40px;
+    margin: 5px 0;
     border: none;
-    background-color: #fff;
-    color: #000;
+    background-color: #000;
+    color: #fff;
     font-size: 1rem;
     cursor: pointer;
     transition: all 0.3s ease-in;
 }
 
 a:hover, button:hover{
-    background-color: #000;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
 }
 
-/* -----Login Page----- */
