--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ input{
     margin: 5px 0;
     width: 100%;
     height: 50px;
+    border: none;
     font-size: 1rem;
     color: #000;
     padding: 0 10px;
