--- a/style.css
+++ b/style.css
@@ -14,6 +14,56 @@ body{
     background-color: #5dd1d1;
 }
 
+/* Nav bar */
+.nav-bar{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px;
+}
+
+.nav-bar .logo{
+    background-color: #5dd1d1;
+    color: #000;
+    font-size: 1rem;
+    padding: 20px;
+    padding-left: 0;
+    font-weight: bold;
+}
+
+.nav-bar .logo span{
+    padding: 20px;
+    background-color: #000;
+    color: #fff;
+    margin-right: 10px;
+}
+
+.nav-bar .menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-bar .menu li{
+    list-style: none;
+    margin: 0 5px;
+}
+
+.nav-bar .menu .user{
+    background-color: #5dd1d1;
+    padding: 15px 20px;
+}
+
+.nav-bar .menu li a:hover{
+    background-color: #5dd1d1;
+}
+
 /* Main section */
 .main-sec{
     position: absolute;
