--- a/style.css
+++ b/style.css
@@ -14,80 +14,6 @@ body{
     background-color: #5dd1d1;
 }
 
-/* Nav bar */
-.nav-bar{
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    background-color: #fff;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 10px;
-}
-
-.nav-bar .logo{
-    background-color: #5dd1d1;
-    color: #000;
-    font-size: 1rem;
-    padding: 20px;
-    padding-left: 0;
-    font-weight: bold;
-}
-
-.nav-bar .logo span{
-    padding: 20px;
-    background-color: #000;
-    color: #fff;
-    margin-right: 10px;
-}
-
-.nav-bar .menu{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.nav-bar .menu li{
-    list-style: none;
-    margin: 0 5px;
-}
-
-.nav-bar .menu .user{
-    background-color: #5dd1d1;
-    padding: 15px 20px;
-}
-
-.nav-bar .menu li a:hover{
-    background-color: #5dd1d1;
-}
-
-/* Main section */
-.main-sec{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #5dd1d1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* Comon forms */
-.common-frm{
-    max-width: 400px;
-    width: 100%;
-    padding: 25px;
-    background-color: #fff;
-}
-
-.common-frm form{
-    padding: 15px;
-    background-color: #5dd1d1;
-}
-
 /* Headings */
 h2{
     font-size: 1.5rem;
@@ -134,6 +60,82 @@ a:hover, button:hover{
     color: #000;
 }
 
+/* Nav bar */
+.nav-bar{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px;
+}
+
+.nav-bar .logo{
+    background-color: #5dd1d1;
+    color: #000;
+    font-size: 1rem;
+    padding: 20px;
+    padding-left: 0;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+.nav-bar .logo span{
+    padding: 20px;
+    background-color: #000;
+    color: #fff;
+    margin-right: 10px;
+}
+
+.nav-bar .menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.nav-bar .menu li{
+    list-style: none;
+    margin: 0 5px;
+}
+
+.nav-bar .menu .user{
+    background-color: #5dd1d1;
+    padding: 15px 20px;
+}
+
+.nav-bar .menu li a:hover{
+    background-color: #5dd1d1;
+}
+
+/* Main section */
+.main-sec{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #5dd1d1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Comon forms */
+.common-frm{
+    max-width: 400px;
+    width: 100%;
+    padding: 25px;
+    background-color: #fff;
+}
+
+.common-frm form{
+    padding: 15px;
+    background-color: #5dd1d1;
+}
+
 /* -----Dashboard page----- */
 .sum-box{
     background-color: #fff;
@@ -151,4 +153,5 @@ a:hover, button:hover{
     background-color: #5dd1d1;
     padding: 10px;
 }
+
 
